# multimodal

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
evals/audio/: evaluators.py  test_cases.py
evals/image/: evaluators.py  test_cases.py
evals/text/: evaluators.py  test_cases.py
evals/video/: evaluators.py  test_cases.py
src/APP/: fastapi_app.py  gradio_app.py
src/COMMON_EVAL/: __init__.py  common_evaluators.py  config.py  utils.py
src/UTILS/: tracing.py
src/agents/: audio_agent.py  customer_agent.py  image_agent.py  text_agent.py  video_agent.py
src/gradio_app/: gradio_app.py
src/loadenv/: __init__.py  env.py
src/types_moderation/: __init__.py  moderation_result.py
tests/: test_gradio_app.py  test_image_agent.py  test_moderation_result.py  test_text_agent.py  test_video_agent.py
